crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__block-data-construct_OB013.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
---
./resources/test/fixtures/obsolescent/OB013.f90:1:7: OB013 `block data` is obsolescent, use a `module` instead
  |
1 |       BLOCK DATA bdfoo
  |       ^^^^^^^^^^^^^^^^ OB013
2 |       COMMON /COMFOO/ ICASE, N, INCX
3 |       DATA ICASE /4/
4 |       END
  |
