crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__computed-go-to_OB041.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
snapshot_kind: text
---
OB041 computed go to statements are obsolescent, use a select case statement
 --> ./resources/test/fixtures/obsolescent/OB041.f90:2:5
  |
1 | program test
2 |     goto (10, 20, 30) M
  |     ^^^^^^^^^^^^^^^^^^^
3 |     go to (10, 20, 30) M
4 |     goto (10, 20, 30) ISAVE(1)
  |

OB041 computed go to statements are obsolescent, use a select case statement
 --> ./resources/test/fixtures/obsolescent/OB041.f90:3:5
  |
1 | program test
2 |     goto (10, 20, 30) M
3 |     go to (10, 20, 30) M
  |     ^^^^^^^^^^^^^^^^^^^^
4 |     goto (10, 20, 30) ISAVE(1)
5 |     go to (10, 20, 30) ISAVE(1)
  |

OB041 computed go to statements are obsolescent, use a select case statement
 --> ./resources/test/fixtures/obsolescent/OB041.f90:4:5
  |
2 |     goto (10, 20, 30) M
3 |     go to (10, 20, 30) M
4 |     goto (10, 20, 30) ISAVE(1)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |     go to (10, 20, 30) ISAVE(1)
6 |     goto (10) ISAVE(1)
  |

OB041 computed go to statements are obsolescent, use a select case statement
 --> ./resources/test/fixtures/obsolescent/OB041.f90:5:5
  |
3 |     go to (10, 20, 30) M
4 |     goto (10, 20, 30) ISAVE(1)
5 |     go to (10, 20, 30) ISAVE(1)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 |     goto (10) ISAVE(1)
7 |     go to (10) ISAVE(1)
  |

OB041 computed go to statements are obsolescent, use a select case statement
 --> ./resources/test/fixtures/obsolescent/OB041.f90:6:5
  |
4 |     goto (10, 20, 30) ISAVE(1)
5 |     go to (10, 20, 30) ISAVE(1)
6 |     goto (10) ISAVE(1)
  |     ^^^^^^^^^^^^^^^^^^
7 |     go to (10) ISAVE(1)
8 |     goto 4
  |

OB041 computed go to statements are obsolescent, use a select case statement
 --> ./resources/test/fixtures/obsolescent/OB041.f90:7:5
  |
5 |     go to (10, 20, 30) ISAVE(1)
6 |     goto (10) ISAVE(1)
7 |     go to (10) ISAVE(1)
  |     ^^^^^^^^^^^^^^^^^^^
8 |     goto 4
9 |     go to 4
  |
