crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__deprecated-character-syntax_OB061.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
---
./resources/test/fixtures/obsolescent/OB061.f90:13:5: OB061 [*] 'character * ( * )' uses deprecated syntax
   |
12 |     ! assumed size
13 |     character * ( * ), intent(in) :: a
   |     ^^^^^^^^^^^^^^^^^ OB061
14 |     character*(*), intent(in) :: b, c*9
15 |     character*(:), allocatable :: d
   |
   = help: Replace with 'character(len=*)'

ℹ Safe fix
10 10 |     use, intrinsic :: iso_c_binding, only: c_char
11 11 | 
12 12 |     ! assumed size
13    |-    character * ( * ), intent(in) :: a
   13 |+    character(len=*), intent(in) :: a
14 14 |     character*(*), intent(in) :: b, c*9
15 15 |     character*(:), allocatable :: d
16 16 | 

./resources/test/fixtures/obsolescent/OB061.f90:14:5: OB061 [*] 'character*(*)' uses deprecated syntax
   |
12 |     ! assumed size
13 |     character * ( * ), intent(in) :: a
14 |     character*(*), intent(in) :: b, c*9
   |     ^^^^^^^^^^^^^ OB061
15 |     character*(:), allocatable :: d
   |
   = help: Replace with 'character(len=*)'

ℹ Safe fix
11 11 | 
12 12 |     ! assumed size
13 13 |     character * ( * ), intent(in) :: a
14    |-    character*(*), intent(in) :: b, c*9
   14 |+    character(len=*), intent(in) :: b, c*9
15 15 |     character*(:), allocatable :: d
16 16 | 
17 17 |     ! sized with a number literal

./resources/test/fixtures/obsolescent/OB061.f90:15:5: OB061 [*] 'character*(:)' uses deprecated syntax
   |
13 |     character * ( * ), intent(in) :: a
14 |     character*(*), intent(in) :: b, c*9
15 |     character*(:), allocatable :: d
   |     ^^^^^^^^^^^^^ OB061
16 |
17 |     ! sized with a number literal
   |
   = help: Replace with 'character(len=:)'

ℹ Safe fix
12 12 |     ! assumed size
13 13 |     character * ( * ), intent(in) :: a
14 14 |     character*(*), intent(in) :: b, c*9
15    |-    character*(:), allocatable :: d
   15 |+    character(len=:), allocatable :: d
16 16 | 
17 17 |     ! sized with a number literal
18 18 |     character*5 e, f

./resources/test/fixtures/obsolescent/OB061.f90:18:5: OB061 [*] 'character*5' uses deprecated syntax
   |
17 |     ! sized with a number literal
18 |     character*5 e, f
   |     ^^^^^^^^^^^ OB061
19 |     CHARACTer  *  10 g
20 |     chAracTer* 3 h, i*7
   |
   = help: Replace with 'character(len=5)'

ℹ Safe fix
15 15 |     character*(:), allocatable :: d
16 16 | 
17 17 |     ! sized with a number literal
18    |-    character*5 e, f
   18 |+    character(len=5) e, f
19 19 |     CHARACTer  *  10 g
20 20 |     chAracTer* 3 h, i*7
21 21 | 

./resources/test/fixtures/obsolescent/OB061.f90:19:5: OB061 [*] 'CHARACTer  *  10' uses deprecated syntax
   |
17 |     ! sized with a number literal
18 |     character*5 e, f
19 |     CHARACTer  *  10 g
   |     ^^^^^^^^^^^^^^^^ OB061
20 |     chAracTer* 3 h, i*7
   |
   = help: Replace with 'CHARACTer(len=10)'

ℹ Safe fix
16 16 | 
17 17 |     ! sized with a number literal
18 18 |     character*5 e, f
19    |-    CHARACTer  *  10 g
   19 |+    CHARACTer(len=10) g
20 20 |     chAracTer* 3 h, i*7
21 21 | 
22 22 |     ! sized with an integer expression

./resources/test/fixtures/obsolescent/OB061.f90:20:5: OB061 [*] 'chAracTer* 3' uses deprecated syntax
   |
18 |     character*5 e, f
19 |     CHARACTer  *  10 g
20 |     chAracTer* 3 h, i*7
   |     ^^^^^^^^^^^^ OB061
21 |
22 |     ! sized with an integer expression
   |
   = help: Replace with 'chAracTer(len=3)'

ℹ Safe fix
17 17 |     ! sized with a number literal
18 18 |     character*5 e, f
19 19 |     CHARACTer  *  10 g
20    |-    chAracTer* 3 h, i*7
   20 |+    chAracTer(len=3) h, i*7
21 21 | 
22 22 |     ! sized with an integer expression
23 23 |     character*(MAX_LEN), intent(in) :: j

./resources/test/fixtures/obsolescent/OB061.f90:23:5: OB061 [*] 'character*(MAX_LEN)' uses deprecated syntax
   |
22 |     ! sized with an integer expression
23 |     character*(MAX_LEN), intent(in) :: j
   |     ^^^^^^^^^^^^^^^^^^^ OB061
24 |     character * (2* (MAX_LEN) ) k
   |
   = help: Replace with 'character(len=MAX_LEN)'

ℹ Safe fix
20 20 |     chAracTer* 3 h, i*7
21 21 | 
22 22 |     ! sized with an integer expression
23    |-    character*(MAX_LEN), intent(in) :: j
   23 |+    character(len=MAX_LEN), intent(in) :: j
24 24 |     character * (2* (MAX_LEN) ) k
25 25 | 
26 26 |     ! these are ok

./resources/test/fixtures/obsolescent/OB061.f90:24:5: OB061 [*] 'character * (2* (MAX_LEN) )' uses deprecated syntax
   |
22 |     ! sized with an integer expression
23 |     character*(MAX_LEN), intent(in) :: j
24 |     character * (2* (MAX_LEN) ) k
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ OB061
25 |
26 |     ! these are ok
   |
   = help: Replace with 'character(len=2* (MAX_LEN))'

ℹ Safe fix
21 21 | 
22 22 |     ! sized with an integer expression
23 23 |     character*(MAX_LEN), intent(in) :: j
24    |-    character * (2* (MAX_LEN) ) k
   24 |+    character(len=2* (MAX_LEN)) k
25 25 | 
26 26 |     ! these are ok
27 27 |     character(*, c_char) :: l
