crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__deprecated-mpi-include_OB201.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
snapshot_kind: text
---
OB201 mpif.h include is deprecated, use mpi or mpi_f08 module instead
  --> ./resources/test/fixtures/obsolescent/OB201.f90:13:5
   |
12 |     ! Discouraged since MPI 3.0, deprecated since MPI 4.1
13 |     include "mpif.h"
   |     ^^^^^^^^^^^^^^^^
14 |
15 | end module obsolete_mpi
   |
