crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__deprecated-omp-include_OB081.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
---
./resources/test/fixtures/obsolescent/OB081.f90:7:5: OB081 omp_lib.h include is deprecated, use the omp_lib module instead
  |
6 |     ! Deprecated since OpenMP 6.0
7 |     include "omp_lib.h"
  |     ^^^^^^^^^^^^^^^^^^^ OB081
8 |
9 | end module obsolete_openmp
  |
