crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__deprecated-omp-include_OB211.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
snapshot_kind: text
---
OB211 omp_lib.h include is deprecated, use the omp_lib module instead
 --> ./resources/test/fixtures/obsolescent/OB211.f90:7:5
  |
6 |     ! Deprecated since OpenMP 6.0
7 |     include "omp_lib.h"
  |     ^^^^^^^^^^^^^^^^^^^
8 |
9 | end module obsolete_openmp
  |
